Archive/d2d7ca692050dda586f0e55759f46012-61c3814520a8d4318f681038dc4b4da7/output
main.cpp:1:1: error: 'D3D_FEATURE_LEVEL' does not name a type
 D3D_FEATURE_LEVEL targetlevel = (D3D_FEATURE_LEVEL)featurelevel;
 ^
main.cpp:2:1: error: 'D3D_FEATURE_LEVEL' does not name a type
 D3D_FEATURE_LEVEL* usedfeaturelevel = reinterpret_cast<D3D_FEATURE_LEVEL*>( &featurelevel );
 ^
main.cpp:3:1: error: 'r' does not name a type
 r = D3D11CreateDeviceAndSwapChain( deviceadapter, 
 ^
main.cpp:8:1: error: expected unqualified-id before 'if'
 if ( r != 0 ) {
 ^
